--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				
 						</ul>
 						<ul class="icons">
-							<li><a href="www.linkedin.com/in/joel-davis-04b6a0252" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/joel-davis-04b6a0252" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/joel693davis/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/Joelsd2005" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
