--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Joel Davis Analyst Portfolio<br />
 						</h1>
-						<p>Data analyst that is skilled in Tableau, power BI, SQL and R by <a href="www.linkedin.com/in/joel-davis-04b6a0252">@Joel Davis</a>
+						<p>Data analyst that is skilled in Tableau, power BI, SQL and R by <a href="">@Joel Davis</a>
 						
 				      	<ul class="action
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
