--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Examples of databases that I have cleaned using SQL which are ready for me to analyse for projects.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View projects</a></li>
 									</ul>
