--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Examples of databases that I have cleaned using SQL which are ready for me to analyse for projects.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View projects</a></li>
+										<li><a href="https://github.com/Joelsd2005/Prd.transaction.analysis" class="button">View projects</a></li>
 									</ul>
 								</article>
 								<article>
