--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 										<h2><a href="https://app.powerbi.com/groups/me/list">Projects in power BI<br />
 										</a></h2>
 									</header>
-									<a href="https://app.powerbi.com/groups/me/list" class="image fit"><img src="images/power BI.png" alt="" /></a>
+									<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/power BI.png" alt="" /></a>
 									<p>Here are projects that I have done or I am currently doing using Power BI to create dashboards for my visualisations.</p>
 									<ul class="actions special">
-										<li><a href="https://app.powerbi.com/groups/me/list" class="button">View projects</a></li>
+										<li><a href="https://github.com/Joelsd2005/PowerBI-projects" class="button">View projects</a></li>
 									</ul>
 								</article>
 								<article>
