--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 							<article class="post featured">
 								<header class="major">
 							
-									<h2><a href="https://public.tableau.com/app/profile/joel.davis/viz/superstoresp/Dashboard1">Data visualizing in Tableau<br />
+									<h2><a href="https://public.tableau.com/app/profile/joel.davis/viz/superstoresp/Dashboard1">Projects in excel<br />
 									</a></h2>
-									<p>This project is about visualizing data on a superstore in Tableau
-								. The data is based of the countries that have ordered products and the sales so trends can be a lot easier to identify trends.</p>
+									<p>These are the projects I have done using excel
+								..</p>
 								</header>
 								<a href="https://public.tableau.com/app/profile/joel.davis/viz/superstoresp/Dashboard1" class="image main"><img src="images/superstore.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -81,11 +81,11 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://public.tableau.com/app/profile/joel.davis">Other projects in Tableau<br />
+										<h2><a href="https://public.tableau.com/app/profile/joel.davis">projects in Tableau<br />
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/joel.davis" class="image fit"><img src="images/Tableau.png" alt="" /></a>
-									<p>Here are projects that I have done or am currently working on using Tableau to visualise the data for my project.</p>
+									<p>Here are projects that I have done or am currently working on using Tableau.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/joel.davis" class="button">View projects</a></li>
 									</ul>
