--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 									<p>These are the projects I have done using excel
 								..</p>
 								</header>
-								<a href="https://public.tableau.com/app/profile/joel.davis/viz/superstoresp/Dashboard1" class="image main"><img src="images/superstore.jpg" alt="" /></a>
+								<a href="https://" class="image main"><img src="images/Excel.image.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/app/profile/joel.davis/viz/superstoresp/Dashboard1" class="button large">View visualisation</a></li>
+									<li><a href="https://" class="button large">View visualisation</a></li>
 								</ul>
 							</article>
 
