--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										<h2><a href="https://">Projects using SQL<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Sql.jpg" alt="" /></a>
 									<p>These are the projects I have done using SQL.</p>
 									<ul class="actions special">
 										<li><a href="https://" class="button">View projects</a></li>
