--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/joel.davis" class="image fit"><img src="images/Tableau.png" alt="" /></a>
-									<p>Here are projects that I have done or am currently working on using Tableau.</p>
+									<p>These are projects I have done using Tableau.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/joel.davis" class="button">View projects</a></li>
 									</ul>
