--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<p>These are the projects I have done using excel
 								..</p>
 								</header>
-								<a href="https://" class="image main"><img src="images/Excel.image.jpg" alt="" /></a>
+								<a href="https://" class="image main"><img src="images/excel.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://" class="button large">View visualisation</a></li>
 								</ul>
