--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/power BI.png" alt="" /></a>
-									<p>Here are projects that I have done or I am currently doing using Power BI to create dashboards for my visualisations.</p>
+									<p>These are the projects I have done using PowerBI.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Joelsd2005/PowerBI-projects" class="button">View projects</a></li>
 									</ul>
@@ -85,7 +85,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/joel.davis" class="image fit"><img src="images/Tableau.png" alt="" /></a>
-									<p>These are projects I have done using Tableau.</p>
+									<p>These are the projects I have done using Tableau.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/joel.davis" class="button">View projects</a></li>
 									</ul>
