--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Joel Davis Analyst Portfolio<br />
 						</h1>
-						<p>Data analyst that is skilled in Tableau, power BI, SQL and R by <a href="">@Joel Davis</a>
+						<p>Data analyst that is skilled in Excel, Tableau, power BI, SQL and R by <a href="">@Joel Davis</a>
 						
 				      	<ul class="action
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -55,12 +55,12 @@
 							
 									<h2><a href="https://">Projects using excel<br />
 									</a></h2>
-									<p>These are the projects I have done using excel
+									<p>These are the projects I have done using excel. 
 								..</p>
 								</header>
-								<a href="https://" class="image main"><img src="images/excel.jpg" alt="" /></a>
+								<a href="https://drive.google.com/drive/folders/1gKB46yQ3C3wX3rPqTMdaQZ0M_jq3d1CQ?usp=sharing" class="image main"><img src="images/excel.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://" class="button large">View visualisation</a></li>
+									<li><a href="https://drive.google.com/drive/folders/1gKB46yQ3C3wX3rPqTMdaQZ0M_jq3d1CQ?usp=sharing" class="button large">View projects</a></li>
 								</ul>
 							</article>
 
