--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 										<h2><a href="https://">Projects using R<br />
 										</a></h2>
 									</header>
-									<a href="https://" class="image fit"><img src="images/R-logo.jpg" alt="" /></a>
+									<a href="https://github.com/Joelsd2005/R-projects" class="image fit"><img src="images/R-logo.jpg" alt="" /></a>
 									<p>These are the projects I have done using R.</p>
 									<ul class="actions special">
-										<li><a href="https://" class="button">View project</a></li>
+										<li><a href="https://github.com/Joelsd2005/R-projects" class="button">View project</a></li>
 									</ul>
 							
 
