--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li class="active"><a href="index.html">Data Analyst Projects</a></li>
-					<li><a href="#certifications">Certifications</a></li>
+					<li><a href="certifications.html">Certifications</a></li>
 				</ul>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/joel-davis15/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
