--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<section class="posts">
 					<article>
 						<header><h2><a href="#">Projects using Power BI</a></h2></header>
-						<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
+						<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/power BI.png" alt="" /></a>
 						<p>These are the projects I have done using Power BI.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Joelsd2005/PowerBI-projects" class="button">View Projects</a></li>
@@ -66,7 +66,7 @@
 
 					<article>
 						<header><h2><a href="#">Projects using Tableau</a></h2></header>
-						<a href="https://public.tableau.com/app/profile/joel.davis" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
+						<a href="https://public.tableau.com/app/profile/joel.davis" class="image fit"><img src="images/Tableau.png" alt="" /></a>
 						<p>These are the projects I have done using Tableau.</p>
 						<ul class="actions special">
 							<li><a href="https://public.tableau.com/app/profile/joel.davis" class="button">View Projects</a></li>
@@ -75,7 +75,7 @@
 
 					<article>
 						<header><h2><a href="#">Projects using SQL</a></h2></header>
-						<a href="#" class="image fit"><img src="images/sql.jpg" alt="" /></a>
+						<a href="#" class="image fit"><img src="images/Sql.jpg" alt="" /></a>
 						<p>These are the projects I have done using SQL.</p>
 						<ul class="actions special">
 							<li><a href="#" class="button">View Projects</a></li>
@@ -84,7 +84,7 @@
 
 					<article>
 						<header><h2><a href="#">Projects using R</a></h2></header>
-						<a href="https://github.com/Joelsd2005/R-projects" class="image fit"><img src="images/r.jpg" alt="" /></a>
+						<a href="https://github.com/Joelsd2005/R-projects" class="image fit"><img src="images/R-logo.jpg" alt="" /></a>
 						<p>These are the projects I have done using R.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Joelsd2005/R-projects" class="button">View Project</a></li>
