--- a/certifications.html
+++ b/certifications.html
@@ -34,45 +34,55 @@
 
 				<!-- Certifications Section -->
 				<section class="posts">
+					
 					<!-- Google Data Analytics -->
 					<article>
 						<header><h3><a href="#">Google Data Analytics</a></h3></header>
-						<a href="https://www.coursera.org/account/accomplishments/professional-cert/7VHN4EXS6PRQ" class="image fit"><img src="images/Google.pdf" alt="Google Data Analytics" /></a>
-						<p>This certification covers the foundational data analytics skills needed to get started in the field.</p>
+						<a href="certifications/Google.pdf" class="image fit">
+							<img src="images/Google.jpg" alt="Google Data Analytics Certification" />
+						</a>
+						<p>This certification covers foundational data analytics skills.</p>
 						<ul class="actions special">
-							<li><a href="https://www.coursera.org/account/accomplishments/professional-cert/7VHN4EXS6PRQ" class="button">View Google Data Analytics</a></li>
+							<li><a href="certifications/Google.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
 					<!-- Data Warehouse Analytics in Microsoft Azure -->
 					<article>
 						<header><h3><a href="#">Data Warehouse Analytics in Microsoft Azure</a></h3></header>
-						<a href="https://www.coursera.org/account/accomplishments/verify/R37XBTD5GQSB" class="image fit"><img src="images/Microsoft.pdf" alt="Data Warehouse Analytics in Microsoft Azure" /></a>
+						<a href="certifications/Microsoft.pdf" class="image fit">
+							<img src="images/Microsoft.jpg" alt="Microsoft Azure Data Warehouse Certification" />
+						</a>
 						<p>This certification focuses on building and managing data warehouses using Microsoft Azure.</p>
 						<ul class="actions special">
-							<li><a href="https://www.coursera.org/account/accomplishments/verify/R37XBTD5GQSB" class="button">View Microsoft Azure Certification</a></li>
+							<li><a href="certifications/Microsoft.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
 					<!-- KPMG Data Analyst Internship -->
 					<article>
 						<header><h3><a href="#">KPMG Data Analyst Internship</a></h3></header>
-						<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/KPMG%20AU/m7W4GMqeT3bh9Nb2c_KPMG%20AU_FrkmMHvrKWyfgJDj4_1664715229236_completion_certificate.pdf" class="image fit"><img src="images/KPMG.pdf" alt="KPMG Data Analyst Internship" /></a>
-						<p>This internship provided valuable insights into real-world data analysis in a corporate environment.</p>
+						<a href="certifications/KPMG.pdf" class="image fit">
+							<img src="images/KPMG.jpg" alt="KPMG Data Analyst Internship Certification" />
+						</a>
+						<p>Completed a virtual internship with KPMG, gaining real-world data analytics experience.</p>
 						<ul class="actions special">
-							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/KPMG%20AU/m7W4GMqeT3bh9Nb2c_KPMG%20AU_FrkmMHvrKWyfgJDj4_1664715229236_completion_certificate.pdf" class="button">View KPMG Internship</a></li>
+							<li><a href="certifications/KPMG.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
-					<!-- Forage Data Analyst Virtual Program -->
+					<!-- Quantium Data Analyst Virtual Program -->
 					<article>
-						<header><h3><a href="#">Forage Data Analyst Virtual Program</a></h3></header>
-						<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Quantium/NkaC7knWtjSbi6aYv_Quantium_FrkmMHvrKWyfgJDj4_1669920420129_completion_certificate.pdf" class="image fit"><img src="images/Quantium.pdf" alt="Forage Data Analyst Virtual Program" /></a>
-						<p>The Forage Data Analyst Virtual Program offers a simulation of a real-world data analyst role.</p>
+						<header><h3><a href="#">Quantium Data Analyst Virtual Program</a></h3></header>
+						<a href="certifications/Quantium.pdf" class="image fit">
+							<img src="images/Quantium.jpg" alt="Quantium Data Analyst Virtual Program" />
+						</a>
+						<p>The Quantium Data Analyst Virtual Program simulates real-world data analyst responsibilities.</p>
 						<ul class="actions special">
-							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Quantium/NkaC7knWtjSbi6aYv_Quantium_FrkmMHvrKWyfgJDj4_1669920420129_completion_certificate.pdf" class="button">View Forage Program</a></li>
+							<li><a href="certifications/Quantium.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
+
 				</section>
 
 			</div>
@@ -106,3 +116,4 @@
 
 	</body>
 </html>
+
