--- a/certifications.html
+++ b/certifications.html
@@ -38,48 +38,48 @@
 					<!-- Google Data Analytics -->
 					<article>
 						<header><h3><a href="#">Google Data Analytics</a></h3></header>
-						<a href="certifications/Google.pdf" class="image fit">
+						<a href="images/Google.pdf" class="image fit">
 							<img src="images/Google.jpg" alt="Google Data Analytics Certification" />
 						</a>
 						<p>This certification covers foundational data analytics skills.</p>
 						<ul class="actions special">
-							<li><a href="certifications/Google.pdf" class="button">View Certification</a></li>
+							<li><a href="images/Google.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
 					<!-- Data Warehouse Analytics in Microsoft Azure -->
 					<article>
 						<header><h3><a href="#">Data Warehouse Analytics in Microsoft Azure</a></h3></header>
-						<a href="certifications/Microsoft.pdf" class="image fit">
+						<a href="images/Microsoft.pdf" class="image fit">
 							<img src="images/Microsoft.jpg" alt="Microsoft Azure Data Warehouse Certification" />
 						</a>
 						<p>This certification focuses on building and managing data warehouses using Microsoft Azure.</p>
 						<ul class="actions special">
-							<li><a href="certifications/Microsoft.pdf" class="button">View Certification</a></li>
+							<li><a href="images/Microsoft.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
 					<!-- KPMG Data Analyst Internship -->
 					<article>
 						<header><h3><a href="#">KPMG Data Analyst Internship</a></h3></header>
-						<a href="certifications/KPMG.pdf" class="image fit">
+						<a href="images/KPMG.pdf" class="image fit">
 							<img src="images/KPMG.jpg" alt="KPMG Data Analyst Internship Certification" />
 						</a>
 						<p>Completed a virtual internship with KPMG, gaining real-world data analytics experience.</p>
 						<ul class="actions special">
-							<li><a href="certifications/KPMG.pdf" class="button">View Certification</a></li>
+							<li><a href="images/KPMG.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
 					<!-- Quantium Data Analyst Virtual Program -->
 					<article>
 						<header><h3><a href="#">Quantium Data Analyst Virtual Program</a></h3></header>
-						<a href="certifications/Quantium.pdf" class="image fit">
+						<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Quantium/NkaC7knWtjSbi6aYv_Quantium_FrkmMHvrKWyfgJDj4_1669920420129_completion_certificate.pdf" class="image fit">
 							<img src="images/Quantium.jpg" alt="Quantium Data Analyst Virtual Program" />
 						</a>
 						<p>The Quantium Data Analyst Virtual Program simulates real-world data analyst responsibilities.</p>
 						<ul class="actions special">
-							<li><a href="certifications/Quantium.pdf" class="button">View Certification</a></li>
+							<li><a href="images/Quantium.jpg" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
