--- a/certifications.html
+++ b/certifications.html
@@ -38,36 +38,36 @@
 					<!-- Google Data Analytics -->
 					<article>
 						<header><h3><a href="#">Google Data Analytics</a></h3></header>
-						<a href="images/Google.pdf" class="image fit">
+						<a href="https://www.coursera.org/account/accomplishments/professional-cert/7VHN4EXS6PRQ" class="image fit">
 							<img src="images/Google.jpg" alt="Google Data Analytics Certification" />
 						</a>
 						<p>This certification covers foundational data analytics skills.</p>
 						<ul class="actions special">
-							<li><a href="images/Google.pdf" class="button">View Certification</a></li>
+							<li><a href="https://www.coursera.org/account/accomplishments/professional-cert/7VHN4EXS6PRQ" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
 					<!-- Data Warehouse Analytics in Microsoft Azure -->
 					<article>
 						<header><h3><a href="#">Data Warehouse Analytics in Microsoft Azure</a></h3></header>
-						<a href="images/Microsoft.pdf" class="image fit">
+						<a href="https://www.coursera.org/account/accomplishments/verify/R37XBTD5GQSB" class="image fit">
 							<img src="images/Microsoft.jpg" alt="Microsoft Azure Data Warehouse Certification" />
 						</a>
 						<p>This certification focuses on building and managing data warehouses using Microsoft Azure.</p>
 						<ul class="actions special">
-							<li><a href="images/Microsoft.pdf" class="button">View Certification</a></li>
+							<li><a href="https://www.coursera.org/account/accomplishments/verify/R37XBTD5GQSB" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
 					<!-- KPMG Data Analyst Internship -->
 					<article>
 						<header><h3><a href="#">KPMG Data Analyst Internship</a></h3></header>
-						<a href="images/KPMG.pdf" class="image fit">
+						<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/KPMG%20AU/m7W4GMqeT3bh9Nb2c_KPMG%20AU_FrkmMHvrKWyfgJDj4_1664715229236_completion_certificate.pdf" class="image fit">
 							<img src="images/KPMG.jpg" alt="KPMG Data Analyst Internship Certification" />
 						</a>
 						<p>Completed a virtual internship with KPMG, gaining real-world data analytics experience.</p>
 						<ul class="actions special">
-							<li><a href="images/KPMG.pdf" class="button">View Certification</a></li>
+							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/KPMG%20AU/m7W4GMqeT3bh9Nb2c_KPMG%20AU_FrkmMHvrKWyfgJDj4_1664715229236_completion_certificate.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
@@ -79,7 +79,7 @@
 						</a>
 						<p>The Quantium Data Analyst Virtual Program simulates real-world data analyst responsibilities.</p>
 						<ul class="actions special">
-							<li><a href="images/Quantium.jpg" class="button">View Certification</a></li>
+							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Quantium/NkaC7knWtjSbi6aYv_Quantium_FrkmMHvrKWyfgJDj4_1669920420129_completion_certificate.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
 
