--- a/certifications.html
+++ b/certifications.html
@@ -41,7 +41,7 @@
 						<a href="https://www.coursera.org/account/accomplishments/professional-cert/7VHN4EXS6PRQ" class="image fit">
 							<img src="images/Google.jpg" alt="Google Data Analytics Certification" />
 						</a>
-						<p>This certification covers foundational data analytics skills.</p>
+						<p>This professional certification, offered by Google via Coursera, provides a comprehensive introduction to data analytics. It covers essential analytical skills, including data cleaning, visualization, and analysis using tools like SQL, R, and Tableau. The program emphasizes real-world applications, culminating in a capstone project where learners apply their skills to solve a data-driven problem.</p>
 						<ul class="actions special">
 							<li><a href="https://www.coursera.org/account/accomplishments/professional-cert/7VHN4EXS6PRQ" class="button">View Certification</a></li>
 						</ul>
@@ -53,7 +53,7 @@
 						<a href="https://www.coursera.org/account/accomplishments/verify/R37XBTD5GQSB" class="image fit">
 							<img src="images/Microsoft.jpg" alt="Microsoft Azure Data Warehouse Certification" />
 						</a>
-						<p>This certification focuses on building and managing data warehouses using Microsoft Azure.</p>
+						<p>This certification focuses on leveraging Microsoft Azure to design and manage large-scale data warehouses. It covers fundamental concepts of cloud-based analytics, including data ingestion, transformation, and storage in Azure Synapse Analytics. The program emphasizes performance optimization, data security, and scalability for enterprise-level data management.</p>
 						<ul class="actions special">
 							<li><a href="https://www.coursera.org/account/accomplishments/verify/R37XBTD5GQSB" class="button">View Certification</a></li>
 						</ul>
@@ -65,7 +65,7 @@
 						<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/KPMG%20AU/m7W4GMqeT3bh9Nb2c_KPMG%20AU_FrkmMHvrKWyfgJDj4_1664715229236_completion_certificate.pdf" class="image fit">
 							<img src="images/KPMG.jpg" alt="KPMG Data Analyst Internship Certification" />
 						</a>
-						<p>Completed a virtual internship with KPMG, gaining real-world data analytics experience.</p>
+						<p>This virtual internship, hosted by KPMG via Forage, simulates a real-world consulting project. Participants analyze a company's customer data, identify business insights, and create data-driven recommendations. The program is designed to develop problem-solving and analytical skills using tools like Python, Excel, and Tableau.</p>
 						<ul class="actions special">
 							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/KPMG%20AU/m7W4GMqeT3bh9Nb2c_KPMG%20AU_FrkmMHvrKWyfgJDj4_1664715229236_completion_certificate.pdf" class="button">View Certification</a></li>
 						</ul>
@@ -77,7 +77,7 @@
 						<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Quantium/NkaC7knWtjSbi6aYv_Quantium_FrkmMHvrKWyfgJDj4_1669920420129_completion_certificate.pdf" class="image fit">
 							<img src="images/Quantium.jpg" alt="Quantium Data Analyst Virtual Program" />
 						</a>
-						<p>The Quantium Data Analyst Virtual Program simulates real-world data analyst responsibilities.</p>
+						<p>The Forage Data Analyst Virtual Program, developed by Quantium, provides hands-on experience with data analysis in a commercial setting. Participants work with a dataset related to customer transactions, applying SQL, Python, and Excel to extract insights. The program simulates how data analysts help businesses optimize their decision-making through data-driven strategies.</p>
 						<ul class="actions special">
 							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Quantium/NkaC7knWtjSbi6aYv_Quantium_FrkmMHvrKWyfgJDj4_1669920420129_completion_certificate.pdf" class="button">View Certification</a></li>
 						</ul>
