--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
 							<li><a href="https://github.com/Joelsd2005/R-projects" class="button">View Project</a></li>
 						</ul>
 					</article>
+<article>
+						<header><h2><a href="#">Projects using Python</a></h2></header>
+						<a href="#" class="image fit"><img src="images/python.jpg" alt="" /></a>
+						<p>These are the projects I have done using Python.</p>
+						<ul class="actions special">
+							<li><a href="#" class="button">View Projects</a></li>
+						</ul>
+					</article>
+
+					<article>
+						<header><h2><a href="#">Projects using Cloud Computing</a></h2></header>
+						<a href="#" class="image fit"><img src="images/cloud.jpg" alt="" /></a>
+						<p>These are the projects I have done using Cloud Computing.</p>
+						<ul class="actions special">
+							<li><a href="#" class="button">View Projects</a></li>
+						</ul>
+					</article>
 				</section>
 
 			
