--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					</article>
 <article>
 						<header><h2><a href="#">Projects using Python</a></h2></header>
-						<a href="#" class="image fit"><img src="images/python.jpg" alt="" /></a>
+						<a href="#" class="image fit"><img src="images/python.png" alt="" /></a>
 						<p>These are the projects I have done using Python.</p>
 						<ul class="actions special">
 							<li><a href="#" class="button">View Projects</a></li>
@@ -101,7 +101,7 @@
 
 					<article>
 						<header><h2><a href="#">Projects using Cloud Computing</a></h2></header>
-						<a href="#" class="image fit"><img src="images/cloud.jpg" alt="" /></a>
+						<a href="#" class="image fit"><img src="images/cloud computing.webp" alt="" /></a>
 						<p>These are the projects I have done using Cloud Computing.</p>
 						<ul class="actions special">
 							<li><a href="#" class="button">View Projects</a></li>
