--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<section class="posts">
 					<article>
 						<header><h2><a href="#">Projects using Power BI</a></h2></header>
-						<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/power BI.png" alt="" /></a>
+						<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
 						<p>These are the projects I have done using Power BI.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Joelsd2005/PowerBI-projects" class="button">View Projects</a></li>
