--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<a href="#" class="image fit"><img src="images/python.png" alt="" /></a>
 						<p>These are the projects I have done using Python.</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">View Projects</a></li>
+							<li><a href="https://github.com/Joelsd2005/Python-Projects" class="button">View Projects</a></li>
 						</ul>
 					</article>
 
