--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					</article>
 <article>
 						<header><h2><a href="#">Projects using Python</a></h2></header>
-						<a href="#" class="image fit"><img src="images/python.png" alt="" /></a>
+						<a href="https://github.com/Joelsd2005/Python-Projects" class="image fit"><img src="images/python.png" alt="" /></a>
 						<p>These are the projects I have done using Python.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Joelsd2005/Python-Projects" class="button">View Projects</a></li>
