--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					</header>
 					<a href="https://drive.google.com/drive/folders/your-link" class="image main"><img src="images/excel.jpg" alt="" /></a>
 					<ul class="actions special">
-						<li><iframe src="https://1drv.ms/f/c/8ebe95e4a7eb0957/EjHVpl5KrYxDvh_xiI9i-Z0BGTYz9f1zqhftfUuVlOORVA?e=N7Hi4kFOLDER-ID#list" style="width:100%; height:600px; border:0;"></iframe> class="button large">View Projects</a></li>
+						<li><a href="https://1drv.ms/f/c/8ebe95e4a7eb0957/EjHVpl5KrYxDvh_xiI9i-Z0BGTYz9f1zqhftfUuVlOORVA?e=N7Hi4kFOLDER-ID#list" class="button large">View Projects</a></li>
 					</ul>
 				</article>
 
