--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<!-- Intro -->
 			<div id="intro">
 				<h1>Joel Davis Analyst Portfolio</h1>
-				<p>Data analyst skilled in Excel, Tableau, Power BI, SQL, and R by <a href="#">@Joel Davis</a></p>
+				<p>Data analyst skilled in Excel, Tableau, Power BI, SQL, R and python by <a href="#">@Joel Davis</a></p>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 				</ul>
