--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 						<h2><a href="#">Projects using Excel</a></h2>
 						<p>These are the projects I have done using Excel.</p>
 					</header>
-					<a href="https://drive.google.com/drive/folders/your-link" class="image main"><img src="images/excel.jpg" alt="" /></a>
+					<a href="excel-projects.html" class="image main"><img src="images/excel.jpg" alt="" /></a>
 					<ul class="actions special">
-						<li><a href="https://1drv.ms/f/c/8ebe95e4a7eb0957/EjHVpl5KrYxDvh_xiI9i-Z0BGTYz9f1zqhftfUuVlOORVA?e=5vqmcj" class="button large">View Projects</a></li>
+						<li><a href="excel-projects.html" class="button large">View Projects</a></li>
 					</ul>
 				</article>
 
