--- a/excel-projects.html
+++ b/excel-projects.html
@@ -5,6 +5,38 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <style>
+        .project-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .project-card {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        .project-card img {
+            max-width: 100%;
+            border-radius: 5px;
+        }
+        .download-btn {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 15px;
+            background: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .download-btn:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body class="is-preload">
 
@@ -13,7 +45,7 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo">Back to Portfolio</a>
+            <a href="index.html" class="button">← Back to Portfolio</a>
         </header>
 
         <!-- Main -->
@@ -21,14 +53,34 @@
             <article class="post featured">
                 <header class="major">
                     <h1>Excel Projects</h1>
-                    <p>Download my Excel projects below.</p>
+                    <p>Download my Excel projects below. Each file includes a detailed breakdown of the data analysis process.</p>
                 </header>
 
-                <ul>
-                    <li><a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EVcJ66fklb4ggI5MBQAAAAABRT8ql4vvjsAekp6Av6TWtA?e=aQzrLI" download>Project 1: Bus Breakdowns and delays project</a></li>
-                    <li><a href="https://1drv.ms/x/s!your-file-link" download>Project 2: Financial Analysis</a></li>
-                    <li><a href="https://1drv.ms/x/s!your-file-link" download>Project 3: Inventory Management</a></li>
-                </ul>
+                <div class="project-container">
+                    <!-- Project 1: Bus Breakdowns & Delays -->
+                    <div class="project-card">
+                        <img src="images/bus-breakdowns.jpg" alt="Bus Breakdowns & Delays">
+                        <h2>Bus Breakdowns & Delays</h2>
+                        <p>Analyzing trends in public transport delays and breakdowns.</p>
+                        <a href="https://1drv.ms/x/s!your-file-link-bus-breakdowns" class="download-btn" download>Download</a>
+                    </div>
+
+                    <!-- Project 2: US Debt Tracker -->
+                    <div class="project-card">
+                        <img src="images/us-debt.jpg" alt="US Debt Tracker">
+                        <h2>US Debt Tracker</h2>
+                        <p>Tracking the growth of US national debt over time.</p>
+                        <a href="https://1drv.ms/x/s!your-file-link-us-debt" class="download-btn" download>Download</a>
+                    </div>
+
+                    <!-- Project 3: Inventory Management -->
+                    <div class="project-card">
+                        <img src="images/inventory-management.jpg" alt="Inventory Management">
+                        <h2>Inventory Management</h2>
+                        <p>Tracking stock levels & forecasting demand.</p>
+                        <a href="https://1drv.ms/x/s!your-file-link-inventory" class="download-btn" download>Download</a>
+                    </div>
+                </div>
             </article>
         </div>
 
