--- a/excel-projects.html
+++ b/excel-projects.html
@@ -59,7 +59,6 @@
                 <div class="project-container">
                     <!-- Project 1: Bus Breakdowns & Delays -->
                     <div class="project-card">
-                        <img src="images/bus-breakdowns.jpg" alt="Bus Breakdowns & Delays">
                         <h2>Bus Breakdowns & Delays</h2>
                         <p>Analyzing trends in public transport delays and breakdowns.</p>
                         <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EVcJ66fklb4ggI5MBQAAAAABRT8ql4vvjsAekp6Av6TWtA" class="download-btn" download>Download</a>
@@ -67,15 +66,13 @@
 
                     <!-- Project 2: US Debt Tracker -->
                     <div class="project-card">
-                        <img src="images/us-debt.jpg" alt="US Debt Tracker">
                         <h2>US Debt Tracker</h2>
                         <p>Tracking the growth of US national debt over time.</p>
-                        <a href="https://1drv.ms/x/s!your-file-link-us-debt" class="download-btn" download>Download</a>
+                        <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EQY6WhWZtURKpDfGZpOcNqYBAURP-ubxZtuXhJCLqhm57g?e=132PIc" class="download-btn" download>Download</a>
                     </div>
 
                     <!-- Project 3: Inventory Management -->
                     <div class="project-card">
-                        <img src="images/inventory-management.jpg" alt="Inventory Management">
                         <h2>Inventory Management</h2>
                         <p>Tracking stock levels & forecasting demand.</p>
                         <a href="https://1drv.ms/x/s!your-file-link-inventory" class="download-btn" download>Download</a>
