--- a/index.html
+++ b/index.html
@@ -6,49 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style>
-			/* Navigation Bar Sticky */
-			#nav {
-				position: sticky;
-				top: 0;
-				background: rgba(0, 0, 0, 0.9);
-				padding: 10px 0;
-				z-index: 1000;
-			}
-
-			/* Smooth Scroll Effect */
-			html {
-				scroll-behavior: smooth;
-			}
-
-			/* Project Image Hover Effect */
-			.image.fit img {
-				transition: transform 0.3s ease-in-out;
-			}
-			.image.fit img:hover {
-				transform: scale(1.05);
-			}
-
-			/* Consistent Button Styling */
-			.button {
-				font-size: 1rem;
-				padding: 12px 20px;
-				border-radius: 8px;
-				transition: background 0.3s;
-			}
-			.button:hover {
-				background: #0056b3;
-			}
-
-			/* Mobile Optimization */
-			@media (max-width: 768px) {
-				.posts {
-					display: flex;
-					flex-direction: column;
-					gap: 20px;
-				}
-			}
-		</style>
 	</head>
 	<body class="is-preload">
 
@@ -58,7 +15,7 @@
 			<!-- Intro -->
 			<div id="intro">
 				<h1>Joel Davis Analyst Portfolio</h1>
-				<p>Data analyst skilled in Excel, Tableau, Power BI, SQL, R, and Python by <a href="#">@Joel Davis</a></p>
+				<p>Data analyst skilled in Excel, Tableau, Power BI, SQL, R and python by <a href="#">@Joel Davis</a></p>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 				</ul>
@@ -69,7 +26,7 @@
 				<a href="index.html" class="logo">Projects</a>
 			</header>
 
-			<!-- Navigation (Sticky) -->
+			<!-- Navigation -->
 			<nav id="nav">
 				<ul class="links">
 					<li class="active"><a href="index.html">Data Analyst Projects</a></li>
@@ -84,13 +41,13 @@
 			<!-- Main Content -->
 			<div id="main">
 
-				<!-- Featured Section: Excel Projects -->
+				<!-- Featured Section: Data Analyst Projects -->
 				<article class="post featured">
 					<header class="major">
 						<h2><a href="#">Projects using Excel</a></h2>
 						<p>These are the projects I have done using Excel.</p>
 					</header>
-					<a href="excel-projects.html" class="image main"><img src="images/excel.jpg" alt="Excel Projects" /></a>
+					<a href="excel-projects.html" class="image main"><img src="images/excel.jpg" alt="" /></a>
 					<ul class="actions special">
 						<li><a href="excel-projects.html" class="button large">View Projects</a></li>
 					</ul>
@@ -100,7 +57,7 @@
 				<section class="posts">
 					<article>
 						<header><h2><a href="#">Projects using Power BI</a></h2></header>
-						<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/powerbi.jpg" alt="Power BI Projects" /></a>
+						<a href="https://github.com/Joelsd2005/PowerBI-projects" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
 						<p>These are the projects I have done using Power BI.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Joelsd2005/PowerBI-projects" class="button">View Projects</a></li>
@@ -109,7 +66,7 @@
 
 					<article>
 						<header><h2><a href="#">Projects using Tableau</a></h2></header>
-						<a href="https://public.tableau.com/app/profile/joel.davis" class="image fit"><img src="images/Tableau.png" alt="Tableau Projects" /></a>
+						<a href="https://public.tableau.com/app/profile/joel.davis" class="image fit"><img src="images/Tableau.png" alt="" /></a>
 						<p>These are the projects I have done using Tableau.</p>
 						<ul class="actions special">
 							<li><a href="https://public.tableau.com/app/profile/joel.davis" class="button">View Projects</a></li>
@@ -118,7 +75,7 @@
 
 					<article>
 						<header><h2><a href="#">Projects using SQL</a></h2></header>
-						<a href="#" class="image fit"><img src="images/Sql.jpg" alt="SQL Projects" /></a>
+						<a href="#" class="image fit"><img src="images/Sql.jpg" alt="" /></a>
 						<p>These are the projects I have done using SQL.</p>
 						<ul class="actions special">
 							<li><a href="#" class="button">View Projects</a></li>
@@ -127,22 +84,32 @@
 
 					<article>
 						<header><h2><a href="#">Projects using R</a></h2></header>
-						<a href="https://github.com/Joelsd2005/R-projects" class="image fit"><img src="images/R-logo.jpg" alt="R Projects" /></a>
+						<a href="https://github.com/Joelsd2005/R-projects" class="image fit"><img src="images/R-logo.jpg" alt="" /></a>
 						<p>These are the projects I have done using R.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Joelsd2005/R-projects" class="button">View Project</a></li>
 						</ul>
 					</article>
-
-					<article>
+<article>
 						<header><h2><a href="#">Projects using Python</a></h2></header>
-						<a href="https://github.com/Joelsd2005/Python-Projects" class="image fit"><img src="images/python.png" alt="Python Projects" /></a>
+						<a href="https://github.com/Joelsd2005/Python-Projects" class="image fit"><img src="images/python.png" alt="" /></a>
 						<p>These are the projects I have done using Python.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Joelsd2005/Python-Projects" class="button">View Projects</a></li>
 						</ul>
 					</article>
+
+					<article>
+						<header><h2><a href="#">Projects using Cloud Computing</a></h2></header>
+						<a href="#" class="image fit"><img src="images/cloud computing.webp" alt="" /></a>
+						<p>These are the projects I have done using Cloud Computing.</p>
+						<ul class="actions special">
+							<li><a href="#" class="button">View Projects</a></li>
+						</ul>
+					</article>
 				</section>
+
+			
 
 			</div>
 
@@ -157,10 +124,31 @@
 						<h3>Email</h3>
 						<p><a href="mailto:davisjoel805@gmail.com">davisjoel805@gmail.com</a></p>
 					</section>
+					<section>
+						<h3>Social</h3>
+						<ul class="icons alt">
+							<li><a href="https://www.linkedin.com/in/joel-davis-04b6a0252" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/Joelsd2005" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+					</section>
 				</section>
 			</footer>
 
+			<!-- Copyright -->
+			<div id="copyright">
+				<ul><li>&copy; Joel Davis</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+			</div>
+
 		</div>
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
