--- a/excel-projects.html
+++ b/excel-projects.html
@@ -45,7 +45,7 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="button">Back to Portfolio</a>
+            <a href="index.html" class="logo">Back to Portfolio</a>
         </header>
 
         <!-- Main -->
