--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
 					<article>
 						<header><h2><a href="#">Projects using SQL</a></h2></header>
-						<a href="#" class="image fit"><img src="images/Sql.jpg" alt="" /></a>
+						<a href="https://github.com/Joelsd2005/SQL-Projects" class="image fit"><img src="images/Sql.jpg" alt="" /></a>
 						<p>These are the projects I have done using SQL.</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">View Projects</a></li>
+							<li><a href="https://github.com/Joelsd2005/SQL-Projects" class="button">View Projects</a></li>
 						</ul>
 					</article>
 
