--- a/certifications.html
+++ b/certifications.html
@@ -82,6 +82,17 @@
 							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Quantium/NkaC7knWtjSbi6aYv_Quantium_FrkmMHvrKWyfgJDj4_1669920420129_completion_certificate.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
+                                        <!-- PwC Power BI Program -->
+					<article>
+						<header><h3><a href="#">PwC Power BI Program</a></h3></header>
+						<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/PwC/your-certificate-link.pdf" class="image fit">
+							<img src="images/PwC.jpg" alt="PwC Power BI Certification" />
+						</a>
+						<p>This virtual program, hosted by PwC via Forage, focuses on using Power BI for business intelligence and data visualization. Participants gain experience in building dashboards, creating data reports, and extracting insights to support business decision-making. The program emphasizes practical applications in the finance and consulting industry.</p>
+						<ul class="actions special">
+							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/PwC/your-certificate-link.pdf" class="button">View Certification</a></li>
+						</ul>
+					</article>
 
 				</section>
 
