--- a/excel-projects.html
+++ b/excel-projects.html
@@ -71,11 +71,11 @@
                         <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EQY6WhWZtURKpDfGZpOcNqYBAURP-ubxZtuXhJCLqhm57g?e=132PIc" class="download-btn" download>Download</a>
                     </div>
 
-                    <!-- Project 3: Inventory Management -->
+                    <!-- Project 3: Sprocket PLC Regression Analysis -->
                     <div class="project-card">
                         <h2>Inventory Management</h2>
                         <p>Tracking stock levels & forecasting demand.</p>
-                        <a href="https://1drv.ms/x/s!your-file-link-inventory" class="download-btn" download>Download</a>
+                        <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EcU0vliZK9pDmbVARZULyJ0BFK7B1Zonu9HFHZd2YKDzbQ?e=ljRWyS" class="download-btn" download>Download</a>
                     </div>
                 </div>
             </article>
