--- a/excel-projects.html
+++ b/excel-projects.html
@@ -74,7 +74,7 @@
                     <!-- Project 3: Sprocket PLC Regression Analysis -->
                     <div class="project-card">
                         <h2>Sprocket PLC Regression Analysis</h2>
-                        <p>Tracking stock levels & forecasting demand.</p>
+                        <p>Comparison of simple and multiple regression in Sprocket PLC data.</p>
                         <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EcU0vliZK9pDmbVARZULyJ0BFK7B1Zonu9HFHZd2YKDzbQ?e=ljRWyS" class="download-btn" download>Download</a>
                     </div>
                 </div>
