--- a/certifications.html
+++ b/certifications.html
@@ -88,7 +88,16 @@
 							<li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/4sLyCPgmsy8DA6Dh3/a87GpgE6tiku7q3gu_4sLyCPgmsy8DA6Dh3_FrkmMHvrKWyfgJDj4_1740184880964_completion_certificate.pdf" class="button">View Certification</a></li>
 						</ul>
 					</article>
-
+                                        <!-- Accenture Data Analytics Program -->
+                                        <article>
+                                                <header><h3><a href="#">Accenture Data Analytics Program</a></h3></header>
+                                                <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/T6kdcdKSTfg2aotxT/hzmoNKtzvAzXsEqx8_T6kdcdKSTfg2aotxT_FrkmMHvrKWyfgJDj4_1741033446862_completion_certificate.pdf" class="image fit">
+                                                </a>
+                                                <p>This virtual program, provided by Accenture via Forage, offers a practical introduction to data analytics in a business setting. Participants work through real-world scenarios, applying data analytics techniques to derive actionable insights. The program focuses on key skills such as data visualization, storytelling with data, and business intelligence, using tools like Excel and Power BI.</p>
+                                                <ul class="actions special">
+                                                        <li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/T6kdcdKSTfg2aotxT/hzmoNKtzvAzXsEqx8_T6kdcdKSTfg2aotxT_FrkmMHvrKWyfgJDj4_1741033446862_completion_certificate.pdf" class="button">View Certification</a></li>
+                                                </ul>
+                                        </article>
 				</section>
 
 			</div>
