--- a/excel-projects.html
+++ b/excel-projects.html
@@ -77,6 +77,13 @@
                         <p>Comparison of simple and multiple regression in Sprocket PLC data.</p>
                         <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EcU0vliZK9pDmbVARZULyJ0BFK7B1Zonu9HFHZd2YKDzbQ?e=ljRWyS" class="download-btn" download>Download</a>
                     </div>
+
+                     <!-- Project 4: Accenture Program Content Analysis -->
+                    <div class="project-card">
+                        <h2>Accenture Program Content Analysis</h2>
+                        <p>Examining key learning modules and insights from the Accenture Data Analytics Program.</p>
+                        <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/ESABCfSYTFBFv2d-M9OEKdkBYnplgeMCIlRkGNXL76Ru2Q?e=cD5I8L" class="download-btn" download>Download</a>
+                    </div>
                 </div>
             </article>
         </div>
