--- a/excel-projects.html
+++ b/excel-projects.html
@@ -84,6 +84,13 @@
                         <p>Examining key learning modules and insights from the Accenture Data Analytics Program.</p>
                         <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/ESABCfSYTFBFv2d-M9OEKdkBYnplgeMCIlRkGNXL76Ru2Q?e=cD5I8L" class="download-btn" download>Download</a>
                     </div>
+
+                     <!-- Project 5: Cerveza Fina Time Series Forecasting Analysis -->
+                    <div class="project-card">
+                        <h2>Cerveza Fina Time Series Forecasting Analysis</h2>
+                        <p>Time series Forecasting analysis using allocation and regression models to predict sales trends, forecast sales, and improve decision-making for Cerveza Fina. .</p>
+                        <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EbsPT7hjb7ZOoQhHBD1hKa4BweIK4Sd6l1hwaDsoE0DwjQ?e=xkrocQ" class="download-btn" download>Download</a>
+                    </div>
                 </div>
             </article>
         </div>
