--- a/certifications.html
+++ b/certifications.html
@@ -98,6 +98,26 @@
                                                         <li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/T6kdcdKSTfg2aotxT/hzmoNKtzvAzXsEqx8_T6kdcdKSTfg2aotxT_FrkmMHvrKWyfgJDj4_1741033446862_completion_certificate.pdf" class="button">View Certification</a></li>
                                                 </ul>
                                         </article>
+                                        <!-- MySQL For Data Analytics -->
+                                        <article>
+                                                <header><h3><a href="#">MySQL For Data Analytics</a></h3></header>
+                                                <a href="https://1drv.ms/b/c/8ebe95e4a7eb0957/Ea4Un0J0cNhFuRefTWGlvdoB_cvTgVnmLssNqCW4kwsrsg?e=SyqtgY" class="image fit">
+                                                </a>
+                                                <p>This course provided hands-on experience in querying, analyzing, and cleaning data using MySQL. Key topics included joins, subqueries, window functions, and data cleaning, along with working with regular expressions and file imports/exports. I applied these skills across four real-world projects, using SQL to extract insights and optimize data workflows.</p>
+                                                <ul class="actions special">
+                                                        <li><a href="https://1drv.ms/b/c/8ebe95e4a7eb0957/Ea4Un0J0cNhFuRefTWGlvdoB_cvTgVnmLssNqCW4kwsrsg?e=SyqtgY" class="button">View Certification</a></li>
+                                                </ul>
+                                        </article>
+                                        <!-- Advanced MySQL For Data Analytics -->
+                                        <article>
+                                                <header><h3><a href="#">Advanced MySQL For Data Analytics</a></h3></header>
+                                                <a href="https://1drv.ms/b/c/8ebe95e4a7eb0957/Ee57eP7aM7RBhEGblQ-toJEBeHquizpwGY5JEc4dNvwA0Q?e=meFlwq" class="image fit">
+                                                </a>
+                                                <p>This course focused on advanced SQL techniques for optimizing data analysis and performance. Topics covered included CTEs, temporary tables, stored procedures, triggers, and indexing. I applied these concepts in a real-world project, enhancing database efficiency and automation.</p>
+                                                <ul class="actions special">
+                                                        <li><a href="https://1drv.ms/b/c/8ebe95e4a7eb0957/Ee57eP7aM7RBhEGblQ-toJEBeHquizpwGY5JEc4dNvwA0Q?e=meFlwq" class="button">View Certification</a></li>
+                                                </ul>
+                                        </article>
 				</section>
 
 			</div>
