--- a/certifications.html
+++ b/certifications.html
@@ -118,6 +118,16 @@
                                                         <li><a href="https://1drv.ms/b/c/8ebe95e4a7eb0957/Ee57eP7aM7RBhEGblQ-toJEBeHquizpwGY5JEc4dNvwA0Q?e=meFlwq" class="button">View Certification</a></li>
                                                 </ul>
                                         </article>
+                                        <!-- Pandas For Data Analytics -->
+                                        <article>
+                                                <header><h3><a href="#">Pandas For Data Analytics</a></h3></header>
+                                                <a href="https://www.analystbuilder.com/achievements/verify/47K89YGVAP?r=y3Ei6hZypypAF4NzaLelgjtCM" class="image fit">
+                                                </a>
+                                                <p>The Pandas for Data Analytics Certification covers essential skills in data manipulation and analysis using Pandas. It includes working with Series and DataFrames, reading and writing files, filtering, indexing, grouping, joining datasets, and data visualization. Learners also focus on data cleaning, preprocessing, and exploration to uncover insights. The certification introduces Polars as an alternative tool and includes two projects for hands-on experience, preparing participants for data analytics roles.</p>
+                                                <ul class="actions special">
+                                                        <li><a href="https://www.analystbuilder.com/achievements/verify/47K89YGVAP?r=y3Ei6hZypypAF4NzaLelgjtCM" class="button">View Certification</a></li>
+                                                </ul>
+                                        </article>
 				</section>
 
 			</div>
